--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "github-badge-api"
-version = "1.0.0"
+version = "2.0.0"
 description = "A high-performance, scalable API for generating dynamic SVG badges for GitHub repositories"
 authors = [
     {name = "Ramkrishna", email = "ramkrishna@code-xon.com"},
@@ -39,6 +39,10 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "aiofiles>=23.2.1",
     "slowapi>=0.1.9",
+    "jinja2>=3.1.0",
+    "aiosqlite>=0.19.0",
+    "matplotlib>=3.8.0",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
