--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "github-badge-api"
-version = "2.0.0"
+version = "3.0.0"
 description = "A high-performance, scalable API for generating dynamic SVG badges for GitHub repositories"
 authors = [
     {name = "Ramkrishna", email = "ramkrishna@code-xon.com"},
@@ -43,6 +43,10 @@ dependencies = [
     "aiosqlite>=0.19.0",
     "matplotlib>=3.8.0",
     "psutil>=5.9.0",
+    "sqlmodel>=0.0.14",
+    "apscheduler>=3.10.0",
+    "websockets>=12.0",
+    "cryptography>=42.0.0",
 ]
 
 [project.optional-dependencies]
