GitHub Badge API 3.5 - FINAL Python Edition
Complete ultra-modular, hyper-fast badge platform:
- Modular badge engine with animations and dynamic rendering
- Multi-provider stats: GitHub, GitLab, Bitbucket, Docker, PyPI, NPM, YouTube, Twitter/X
- Deep insights: commit velocity, activity rank, contributor heatmaps
- Trophy system: Bronze/Silver/Gold/Diamond/Legendary auto-awards
- Badge composition with horizontal/vertical layouts
- 9 advanced themes: classic, flat, pixel, neon, cyberpunk, glass, hacker-green, minimal, transparent
- Plugin ecosystem with hot-reload Python modules
- Comprehensive dashboard with previewer, analytics, theme editor
- SQLite/Redis analytics tracking renders, cache hits, popular badges
- CDN-ready caching with ETags, pre-rendering, Cloudflare compatibility
- Security: HMAC signing, API keys, rate limiting, abuse detection
- Automation: APScheduler cron jobs, GitHub webhooks for cache refresh
- WebSocket realtime streaming for live badge stats
- Complete deployment suite: Docker, K8s, Helm, PythonAnywhere, Render, Fly.io
- Full documentation and testing suite
- 100% Python, ZERO AI features

Credits: Code-Xon (Organization), Ramkrishna (Lead Developer), Razzak (Co-Developer)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "github-badge-api"
-version = "3.0.0"
+version = "3.5.0"
 description = "A high-performance, scalable API for generating dynamic SVG badges for GitHub repositories"
 authors = [
     {name = "Ramkrishna", email = "ramkrishna@code-xon.com"},
@@ -47,6 +47,8 @@ dependencies = [
     "apscheduler>=3.10.0",
     "websockets>=12.0",
     "cryptography>=42.0.0",
+    "hmac>=1.0",
+    "hashlib>=1.0",
 ]
 
 [project.optional-dependencies]
